# libmctp

./: meson.build
